[package]
name = "tmpl"
description = "Project templating made easy"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive", "cargo"] }
git2 = "0.13.25"
run_script = "^0.9.0"
toml = "0.5.0"
tempfile = "3"
stopwatch = "0.0.7"
hhmmss = { git = "https://github.com/jwpjrdev/hhmmss" }
shellexpand = "2.1.0"
directories = "3.0.2"
lazy-regex = "2.2.2"
dialoguer = "0.9.0"
console = "0.15.0"
indicatif = "0.16.2"
cmd_lib = "1.3.0"
serde = { version = "1", features = ["derive"] }
